# chatgpt-mirai-qq-bot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-cn  Dockerfile_BACKUP_1875  MANIFEST.in  README.md  Unofficial.py  ariadne_bot.py  bot.py  chat.pkl  chatbot.py  chatopenai.py  command.py  config.example.cfg  config.example.json  config.py  config.wechat.example.cfg  config.yaml.example  constants.py  conversation.py  conversation_manager.py  db.py  discord_bot.py  docker-compose.clean.yaml  docker-compose.go-cqhttp.yaml  docker-compose.yaml  main.py  manager.py  onebot_bot.py  open_ai_bot.py  pyproject.toml  pytest.ini  requirement_wechat.txt  requirements.txt  run.bat  telegram_bot.py  (+6 more)
accounts/: __init__.py  manager.py
adapter/: botservice.py
charts/: .helmignore  Chart.yaml  values.yaml
chatbot/: Unofficial.py  V1.py  __init__.py  chatgpt.py
data/: rate_usage.json
demos/: demo_azure_free_tts.py
docker/: start.sh  xpra.conf
drawing/: __init__.py  base.py  openai_api.py  sdwebui.py
exceptions/: __init__.py
framework/: conversation.py  logger.py  messages.py  prompt_engine.py  request.py  universal.py
kirara_ai/: __init__.py  __main__.py  entry.py  internal.py  logger.py
manager/: _init_.py  bot.bak  bot.py  ratelimit.py
middlewares/: baiducloud.py  concurrentlock.py  draw_ratelimit.py  middleware.py  middlewares_loader.py  openai_moderation.py  ratelimit.py  timeout.py
openai_kira/: __init__.py  requirements.txt
presets/: README.md  catgirl.txt  catgirl_en.txt  default.txt  issue402.txt  预设模板.txt
prompts/: catgirl.yml  default.yml  default_speak.yml
renderer/: __init__.py  merger.py  renderer.py  splitter.py
tests/: test_config_loader.py  test_game_blocks.py  test_media_element.py  test_system_blocks.py  test_workflow_builder.py  test_workflow_factories.py
tools/: Chat.py  Data.py  Detect.py
tts/: __init__.py  azure.py  edge.py  test_azure.py  test_edge.py  text_to_speech.py  tts.py
utils/: Base.py  Chat.py  Data.py  __init__.py  azure_free_tts.py  azure_tts.py  edge_tts.py  exithooks.py  network.py  retry.py  (+6 more)
(+678 files in other folders)
